<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#574848"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginClickActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@drawable/background_shape"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/LoginMain">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/shr_hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/shr_hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ckb_rememberPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="remember password">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="7dp"

            android:gravity="right">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/shr_button_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_LoginUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_white_all_corner"
                android:text="@string/shr_button_Login"
                app:backgroundTint="@color/design_default_color_error" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have password ?"
                android:textStyle="italic">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_SignUp"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Sign up now "
                android:textColor="#1F39C6"
                android:textStyle="bold">

            </com.google.android.material.textview.MaterialTextView>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_resetPassword"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="Reset your password "
            android:textColor="#E60D0D"
            android:textStyle="italic">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>


</LinearLayout>